--- a/Devoir de maison.html
+++ b/Devoir de maison.html
@@ -15,7 +15,7 @@
 
   <ul>
     <li>
-      <a href="https://www.kraftcanada.ca/fr-ca ">kraft Heinz</a>
+      <a href="https://www.kraftcanada.ca/fr-ca ">krafte Heinz</a>
     </li>
 
     <li>
